--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23000000' rx='12'/><text x='50' y='75' font-family='Georgia, Times New Roman, serif' font-size='72' font-weight='bold' fill='white' text-anchor='middle' letter-spacing='-1'>C</text></svg>">
-    
+
+    <!-- Common CSS and JS -->
+    <link rel="stylesheet" href="/css/common.css">
+    <script src="/js/common.js" defer></script>
+
     <!-- RSS Feed -->
     <link rel="alternate" type="application/rss+xml" title="COLIN's Blog RSS Feed" href="/rss.xml">
 
@@ -1166,18 +1170,26 @@
                 height: 48px;
             }
 
+            /* 修复导航栏在移动端的显示 - 保持横向排列 */
             .nav-container {
                 padding: 1rem;
+                flex-direction: row !important;
                 flex-wrap: wrap;
+            }
+
+            .nav-right {
+                gap: 0.8rem;
+                flex-direction: row !important;
             }
 
             .nav-links {
                 gap: 1rem;
                 font-size: 0.85rem;
+                flex-direction: row !important;
             }
 
-            .nav-right {
-                gap: 1rem;
+            .logo {
+                font-size: 1.2rem;
             }
 
             .lang-switcher {
@@ -1187,6 +1199,12 @@
             .lang-btn {
                 padding: 0.3rem 0.6rem;
                 font-size: 0.8rem;
+            }
+
+            .theme-switcher {
+                width: 40px;
+                height: 40px;
+                font-size: 1rem;
             }
 
             .hero-name {
